Fix: auto create users from ldap

--- a/templates/settings.json.j2
+++ b/templates/settings.json.j2
@@ -21,7 +21,8 @@
         "Filter": "{{ ldap_filter }}",
         "UserNameAttribute": "{{ ldap_username_attribute }}"
       }
-    ]
+    ],
+    "AutoCreateUsers": true
   },
   {% endif %}
   "AllowBindMountsForRegularUsers": {{ allow_bindmounts_users }},
